duniverse/menhirLib.20200211/test/static/bad/double-equals.mly
%token FOO BAR

%%

prod:
  x == FOO /* intentional syntax error */
    { () }

