duniverse/menhirLib.20200211/test/static/bad/double-equals.exp
File "double-equals.mly", line 6, characters 4-6:
Error: syntax error after 'x' and before '=='.
Ill-formed production.
A production is a sequence of producers, followed with a semantic action.
Examples of well-formed producers:
  expr
  option(COMMA)
  separated_list(COMMA, expr)
  e = expr
  ds = declaration*
  es = list(terminated(expr, SEMI))
  es = list(e = expr SEMI { e })
  xs = list(x = var { Some x } | WILDCARD { None })
  expr [@cost 0]
